[package]
name = "telegram-mqtt-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0"
log = "0"
reqwest = { version = "0", features = ["json"] }
rumqttc = { version = "0" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
#teloxide = { version = "0", features = ["macros"] }
tokio = { version =  "1", features = ["full"] }